# Blackbird

./: .project  Makefile.am  README  README.md  configure.ac  index.theme
gtk-2.0/: gtkrc
gtk-2.0/apps/: panel.rc  terminal.rc  thunar.rc  thunar_experimental.rc  xfce-panel.rc
gtk-3.0/: gtk-dark.css  gtk-widgets-assets.css  gtk-widgets-borders.css  gtk-widgets-dark.css  gtk-widgets.css  gtk.css  settings.ini
gtk-3.0/apps/: gnome-applications.css  misc.css
gtk-3.18/: gtk-widgets-assets.css  gtk-widgets-backdrop.css  gtk.css
gtk-3.20/: gtk-widgets-assets.css  gtk-widgets-backdrop.css  gtk-widgets.css  gtk.css
metacity-1/: metacity-theme-1.xml
xfce-notify-4.0/: gtkrc
xfwm4/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-right-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  shade-active.xpm  shade-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-prelight.xpm  shade-toggled-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-prelight.xpm  stick-pressed.xpm  stick-toggled-active.xpm  stick-toggled-inactive.xpm  stick-toggled-prelight.xpm  (+7 more)
(+7 files in other folders)
