AC_INIT([Blackbird ], 0.4, [https://github.com/shimmerproject/Blackbird/issues], [Blackbird], [http://shimmerproject.org])
AM_INIT_AUTOMAKE([1.11 foreign subdir-objects tar-ustar no-dist-gzip dist-xz -Wno-portability])
AM_SILENT_RULES([yes])

AC_PREFIX_DEFAULT(/usr)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Blackbird $VERSION
        ========
        prefix:                 ${prefix}

])
